<resources>
    <string name="auto_update">更新提醒</string>
    <string name="new_version">最新版本：</string>
    <string name="update_log">更新日志：</string>
    <string name="update_right_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="already_new_version">已经是最新版本！</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="loading">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="channel_id">hn_decision</string>
    <string name="app_name">海南天气</string>
    <string name="app_name_test">海南天气测试</string>
    <string name="hainan">海南</string>
    <string name="home">首页</string>
    <string name="city_manager">切换城市</string>
    <string name="acount_name">账户：</string>
    <string name="acount_passwd">密码：</string>
    <string name="login">登录</string>
    <string name="hn_decision_service">海南省决策气象服务</string>
    <string name="hn_decision_service_support">由海南省气象服务中心和中国气象局公共气象服务中心\n共同提供技术支持</string>
    <string name="hn_weather">海南省气象台</string>
    <string name="hn_weather_tai">海南省气象台%1$s发布</string>
    <string name="input_account_tip">请输入用户名</string>
    <string name="input_passwd_tip">请输入密码</string>
    <string name="passwd_error_tip">密码错误</string>
    <string name="network_error_tip">网络异常</string>
    <string name="press_again_quit_tip">再按一次退出</string>
    <string name="pdf_big">+</string>
    <string name="pdf_small">-</string>
    <string name="loading_fail">加载失败</string>
    <string name="detail_data">详细数据>>></string>
    <string name="other_time">历史数据查询>>></string>
    <string name="choose_time">请选择时间</string>
    <string name="cancel">取消</string>
    <string name="live_tatble_header_station">站名</string>
    <string name="live_tatble_header_place">详属地</string>
    <string name="live_tatble_header_value">余量(mm)</string>
    <string name="fl">级</string>
    <string name="days_weather">15天预报</string>
    <string name="air_shidu">相对湿度：%1$s</string>
    <string name="shidu">湿度&#160;%1$s</string>
    <string name="air_zhiliang">空气质量&#160;%1$s</string>
    <string name="warning_home">%1$s预警信号</string>
    <string name="zhuan">%1$s转%2$s</string>
    <string name="temperature_to">%1$s~%2$s</string>
    <string name="province_time_to">%1$s年%2$s月%3$s日%4$s时发布的市县未来24小时预报</string>
    <string name="qixiangtai">%1$s气象台</string>
    <string name="place_pub">发布</string>
    <string name="warning_title">灾害预警</string>
    <string name="yubao">预报</string>
    <string name="qushi">趋势</string>
    <string name="more">更多</string>
    <string name="cant_deal">无法处理</string>
    <string name="no_data">暂无数据</string>
    <string name="no_img">无图片</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="notify_title">消息通知</string>
    <string name="feed_back">意见反馈</string>
    <string name="my_account">我的账户</string>
    <string name="clean_cache">清理缓存</string>
    <string name="check_upgrade">检测版本</string>
    <string name="swith_server">切换服务器</string>
    <string name="local_server">本地服务</string>
    <string name="cloud_server">云服务</string>
    <string name="logout">退出</string>
    <string name="no_update">没有更新</string>
    <string name="no_wifi">没有wifi连接， 只在wifi下更新</string>
    <string name="update_time_out">更新超时</string>
    <string name="about_us_intro">&#160;&#160;&#160;&#160;&#160;&#160;海南省气象局于1988年5月成立，属省政府建制，代表省政府主管全省气象行业工作，为基础性、科技型的社会公益性正厅级事业单位，担负我省保障国民经济建设和人民生命财产安全的气象服务工作。2010年9月，根据中央机构编制委员会办公室《关于海南省气象工作管理体制调整的批复》（中央编办复字〔2010〕281号）精神，海南省气象局实行中国气象局和海南省人民政府双重领导、以中国气象局领导为主的管理体制，海南省气象系统各级管理机构仍实行上级气象主管机构与本级人民政府双重领导，以气象主管机构领导为主的管理体制。现有内设机构11个、正处级直属事业单位9个、地级市气象局2个、县级气象局(台、站)18个和农业气象试验站5个。</string>
    <string name="feed_back_content">您对本应用的看法和意见</string>
    <string name="feed_back_email">请输入邮箱</string>
    <string name="feed_back_phone">请输入电话</string>
    <string name="feed_back_commit">提交</string>
    <string name="sorting">排序中&#8230;</string>
    <string name="login_fail">登录失败</string>
    <string name="no_warning">暂无预警</string>
    <string name="cleaning">正在清理&#8230;</string>
    <string name="clean_ok">清理完成</string>
    <string name="input_content_tip">请输入反馈意见</string>
    <string name="commiting">正在提交&#8230;</string>
    <string name="commit_fail">提交失败</string>
    <string name="commit_ok">提交成功</string>
    <string name="micro_wind">微风</string>
    <string name="search">搜索</string>
    <string name="today">今天&#160;%1$s</string>
    <string name="xingqi">星期</string>
    <string name="week">周</string>
    <string name="hour">%1$s时</string>
    <string name="city_name">城市名称</string>
    <string name="warning_info">预警信息</string>
    <string name="sea_name">海区名称</string>
    <string name="hn_sea">海南省海区</string>
    <string name="is_loading">正在加载...</string>
    <string name="chart_hour">时</string>
    <string name="chart_north">北</string>
    <string name="chart_north_east">东北</string>
    <string name="chart_east">东</string>
    <string name="chart_south_east">东南</string>
    <string name="chart_south">南</string>
    <string name="chart_south_west">西南</string>
    <string name="chart_west">西</string>
    <string name="chart_north_west">西北</string>
    <string name="chart_china_forecast"> 中国预报\n</string>
    <string name="chart_time1">yyyy年MM月dd日 kk时</string>
    <string name="chart_time11111">时间：</string>
    <string name="chart_biggest_speed">最大风速：</string>
    <string name="chart_speed1">米/秒</string>
    <string name="chart_center_pressure">中心气压：</string>
    <string name="chart_baipa">百帕\n</string>
    <string name="chart_yidong_direct">移动方向：</string>
    <string name="chart_yidong_speed">移动速度：</string>
    <string name="chart_speed2">公里/小时\n</string>
    <string name="chart_radius1">7级风圈半径：</string>
    <string name="chart_kilometer">公里\n</string>
    <string name="chart_radius2">10级风圈半径：</string>
    <string name="chart_radius3">12级风圈半径：</string>
    <string name="chart_di">第</string>
    <string name="chart_haotaifeng">号台风</string>
    <string name="chart_propt">提示</string>
    <string name="typhoon_level1">热带低压</string>
    <string name="typhoon_level2">热带风暴</string>
    <string name="typhoon_level3">强热带风暴</string>
    <string name="typhoon_level4">台风</string>
    <string name="typhoon_level5">强台风</string>
    <string name="typhoon_level6">超强台风</string>
    <string name="typhoon_login">登陆地点</string>
    <string name="typhoon_influnce">影响区域</string>
    <string name="line_24h">24\n小\n时\n警\n戒\n线</string>
    <string name="line_48h">48\n小\n时\n警\n戒\n线</string>
    <string name="no_typhoon">当前无台风</string>
    <string name="aqi0">优</string>
    <string name="aqi1">良</string>
    <string name="aqi2">轻度污染</string>
    <string name="aqi3">中度污染</string>
    <string name="aqi4">重度污染</string>
    <string name="aqi5">严重污染</string>
    <string name="weather0">晴</string>
    <string name="weather1">多云</string>
    <string name="weather2">阴</string>
    <string name="weather3">阵雨</string>
    <string name="weather4">雷阵雨</string>
    <string name="weather5">雨夹冰雹</string>
    <string name="weather6">雨夹雪</string>
    <string name="weather7">小雨</string>
    <string name="weather8">中雨</string>
    <string name="weather9">大雨</string>
    <string name="weather10">暴雨</string>
    <string name="weather11">大暴雨</string>
    <string name="weather12">特大暴雨</string>
    <string name="weather13">阵雪</string>
    <string name="weather14">小雪</string>
    <string name="weather15">中雪</string>
    <string name="weather16">大雪</string>
    <string name="weather17">暴雪</string>
    <string name="weather18">雾</string>
    <string name="weather19">冻雨</string>
    <string name="weather20">沙尘暴</string>
    <string name="weather21">小雨-中雨</string>
    <string name="weather22">中雨-大雨</string>
    <string name="weather23">大雨-暴雨</string>
    <string name="weather24">暴雨-大暴雨</string>
    <string name="weather25">大暴雨-特大暴雨</string>
    <string name="weather26">小雪-中雪</string>
    <string name="weather27">中雪-大雪</string>
    <string name="weather28">大雪-暴雪</string>
    <string name="weather29">浮尘</string>
    <string name="weather30">扬沙</string>
    <string name="weather31">强沙尘暴</string>
    <string name="weather32">浓雾</string>
    <string name="weather33">雪</string>
    <string name="weather49">强浓雾</string>
    <string name="weather53">霾</string>
    <string name="weather54">中度霾</string>
    <string name="weather55">重度霾</string>
    <string name="weather56">严重霾</string>
    <string name="weather57">大雾</string>
    <string name="weather58">特强浓雾</string>
    <string name="weather301">小雨</string>
    <string name="weather302">小雪</string>
    <string name="wind_dir0"></string>
    <string name="wind_dir1">东北风</string>
    <string name="wind_dir2">东风</string>
    <string name="wind_dir3">东南风</string>
    <string name="wind_dir4">南风</string>
    <string name="wind_dir5">西南风</string>
    <string name="wind_dir6">西风</string>
    <string name="wind_dir7">西北风</string>
    <string name="wind_dir8">北风</string>
    <string name="wind_dir9">旋转风</string>
    <string name="no_statics">未统计</string>
    <string name="from">自</string>
    <string name="to">至</string>
    <string name="highest_temp">日最高气温</string>
    <string name="lowest_temp">日最低气温</string>
    <string name="max_speed">日最大风速</string>
    <string name="max_fall">日最大降水量</string>
    <string name="lx_no_fall">连续无降水日数</string>
    <string name="lx_no_mai">连续霾日数</string>
    <string name="no_clientid">(none)</string>
    <string name="start">已启动</string>
    <string name="clientid">clientid&#160;=&#160;</string>
    <string name="stop">已停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="transmit">透传内容</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
</resources>