<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/time_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:ellipsize="end"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/other_time"
        android:textColor="@color/main_color"
        android:textSize="@dimen/action_bar_font_size" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_view"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:ellipsize="end"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/detail_data"
        android:textColor="@color/main_color"
        android:textSize="@dimen/action_bar_font_size" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_view"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

</RelativeLayout>