<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:scrollbars="none"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_view_margin_v"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_blue" />

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_view_margin_h"
            android:layout_marginTop="@dimen/login_view_margin_v"
            android:alpha="0.5"
            android:background="@drawable/login_input_layout_bg"
            android:orientation="vertical"
            android:padding="@dimen/login_view_margin_h" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acount_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_font_size" />

                <EditText
                    android:id="@+id/account_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:background="@drawable/login_input_bg"
                    android:hint=""
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="@dimen/login_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acount_passwd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_font_size" />

                <EditText
                    android:id="@+id/passwd_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/login_input_bg"
                    android:hint=""
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/login_font_size" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_view_margin_h"
            android:layout_marginTop="@dimen/login_view_margin_v"
            android:background="@drawable/login_btn_bg"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/login_font_size"
            android:onClick="onLoginAction" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_view_margin_v"
            android:text="@string/hn_decision_service"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/login_hn_decision_service_font_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hn_weather"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/login_hn_weather_font_size" />
    </LinearLayout>

</ScrollView>