<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/tvBlank"
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <RelativeLayout
            android:layout_below="@id/tvBlank"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color">

            <Button
                android:id="@+id/left_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/back"
                android:onClick="onLeftButtonAction"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <TextView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/feed_back"
                android:textColor="@color/white"
                android:textSize="@dimen/action_bar_font_size" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:id="@+id/content_view"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/login_input_bg"
                android:gravity="top|start"
                android:hint="@string/feed_back_content"
                android:maxLines="5"
                android:padding="3dp"
                android:textSize="@dimen/login_font_size" />

            <EditText
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_input_bg"
                android:hint="@string/feed_back_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="@dimen/login_font_size" />

            <EditText
                android:id="@+id/phone_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_input_bg"
                android:hint="@string/feed_back_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="@dimen/login_font_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_view_margin_v"
                android:background="@drawable/login_btn_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/feed_back_commit"
                android:onClick="onCommitAction"
                android:textColor="@color/white"
                android:textSize="@dimen/login_font_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>